--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="main-content-left">
 				<div class="content-section">
 					<div class="content-header">
-						What is ArraMon?
+						What is ArraMon / ऐरेमौन?
 					</div>
 					<div class="content-text">
 						<div style="text-align:left;">
