--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 					<div class="title">
 						ArraMon: A Joint Navigation-Assembly Instruction Interpretation Task in Dynamic Environments
 					</div>
+					<br>
+					<div style="font-size:25px;font-weight:400;">
+						Hyounghun Kim, Abhay Zala, Graham Burri, Hao Tan, Mohit Bansal
+					</div>
 				</div>
 			</div>
 			<div class="main-content-left">
